--- a/src/Controls/KarveControls/test/App.xaml
+++ b/src/Controls/KarveControls/test/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:KarveControlsTest"
-             StartupUri="MainWindow.xaml">
+             StartupUri="TestWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
